Fixed layout issue with dropdowns

--- a/app/assets/sass/specifics/_search.scss
+++ b/app/assets/sass/specifics/_search.scss
@@ -1,6 +1,10 @@
 .search {
     @include span(3 of 12);
 
+    &__input-block {
+        @include clearfix;
+    }
+
     &__price-range {
         font-size: smaller;
 
